fix(UI) : fixed UI

--- a/src/app/components/footer.module.scss
+++ b/src/app/components/footer.module.scss
@@ -10,5 +10,9 @@
     color: #C2C2C2;
     padding-top: 8px;
     padding-bottom: 8px;
+    a{
+      color: white;
+      text-decoration: none;
+    }
   }
 }
