--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -83,13 +83,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  
+  background-color: #ececec;
+  font-family: "Roboto" !important;
+  font-style: normal;
 }
 
 a {
-  
+  text-decoration: none;
 }
 
